--- a/index.html
+++ b/index.html
@@ -107,12 +107,8 @@
                         UX Research in AI / Conversation Design / FinTech
                     </div>
                     <h1 class="text-block" id="headline1">
-                        <span id="part1"
-                            >Empowering FinTech <br />Professionals</span
-                        >
-                        <span id="part2"
-                            >with Advanced <br />AI Capabilities</span
-                        >
+                        <span id="part1"> Supporting Accounting Experts </span>
+                        <span id="part2">with AI-Driven FinTech Tools</span>
                     </h1>
                     <a
                         href="/reconciliaion-genai"
@@ -120,7 +116,7 @@
                         id="cta-button"
                     >
                         Open Project
-                        <img src="img/arrow-right.svg" alt="Arrow Icon" />
+                        <img src="img/arrow-right-w.svg" alt="Arrow Icon" />
                     </a>
                 </div>
                 <div id="image-sequence-container">
@@ -149,8 +145,8 @@
                             FinTech
                         </p>
                         <h2>
-                            Unified Reconciliation Platform for Accurate
-                            Financial Data Management
+                            Streamlining Financial Processes through Unified
+                            Reconciliation Platform
                         </h2>
                         <a href="/reconciliaion-dashboard" class="project-link"
                             >Open Project<img src="img/arrow-right.svg" alt=""
