--- a/index.html
+++ b/index.html
@@ -68,70 +68,83 @@
                 </div>
             </div>
 
-            <div id="second-section">
-                <div id="second-content">
-                    <p>
-                        <span class="text-part" id="part-1">
-                            As technology rapidly evolves, it continuously
-                            shapes every aspect of our lives,</span
-                        >
-                        <span class="text-part" id="part-2">
-                            <span class="text-gradient">designers</span> play a
-                            crucial role in making it accessible and
-                            intuitive,</span
-                        >
-                        <span class="text-part" id="part-3">
-                            ensuring users can live easier, more beautiful
-                            lives, and adapt seamlessly to the ever-changing
-                            <span class="text-gradient">digital</span>
-                            landscape.</span
-                        >
-                    </p>
-                </div>
-            </div>
+            <!-- experise  -->
+            <div id="container">
+                <div class="p2-header"><h1>My Expertise</h1></div>
 
-            <!--p1 header  -->
-
-            <div id="third-section">
-                <span id="third-heading">Case Studies</span>
-                <div class="centered-image">
-                    <img src="img/arrow.svg" alt="Arrow Icon" id="arrow-icon" />
-                </div>
-            </div>
-
-            <!--bp1 project  -->
-            <div id="p1-container">
-                <div id="p1-background"></div>
-                <div id="p1-content">
-                    <div class="text-block" id="tags">
-                        UX Research in AI / Conversation Design / FinTech
+                <div class="expertise-section">
+                    <div class="expertise-item">
+                        <div class="expertise-number">(01)</div>
+                        <div>
+                            <h2>Leading Design Initiatives</h2>
+                            <p>
+                                Skilled in guiding projects from planning to
+                                final design in diverse setups.
+                            </p>
+                        </div>
                     </div>
-                    <h1 class="text-block" id="headline1">
-                        <span id="part1"> Supporting Accounting Experts </span>
-                        <span id="part2">with AI-Driven FinTech Tools</span>
-                    </h1>
-                    <a
-                        href="/reconciliation-genai"
-                        class="text-block"
-                        id="cta-button"
-                    >
-                        Open Project
-                        <img src="img/arrow-right-w.svg" alt="Arrow Icon" />
-                    </a>
+                    <div class="expertise-item">
+                        <div class="expertise-number">(02)</div>
+                        <div>
+                            <h2>Conducting UX Research</h2>
+                            <p>
+                                Experienced in conducting solo research and
+                                collaborating with dedicated UX teams.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="expertise-item">
+                        <div class="expertise-number">(03)</div>
+                        <div>
+                            <h2>Navigating Complex Domains</h2>
+                            <p>
+                                Worked in challenging fields like MedTech and
+                                FinTech, handling unique complexities.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="expertise-item">
+                        <div class="expertise-number">(04)</div>
+                        <div>
+                            <h2>Solving Design Challenges</h2>
+                            <p>
+                                Tackled high-uncertainty projects, developing
+                                creative solutions under ambiguity.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="expertise-item">
+                        <div class="expertise-number">(05)</div>
+                        <div>
+                            <h2>Facilitating Stakeholder Communication</h2>
+                            <p>
+                                Proficient in aligning teams to achieve
+                                impactful design outcomes.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="expertise-item">
+                        <div class="expertise-number">(06)</div>
+                        <div>
+                            <h2>Balancing Technical Considerations</h2>
+                            <p>
+                                My background in development enables effective
+                                collaboration with dev teams.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div id="image-sequence-container">
-                    <img
-                        id="image-sequence"
-                        src="frames_1/p1000.webp"
-                        alt="Animation Frame"
-                    />
-                </div>
+            </div>
+
+            <!--p2 header  -->
+            <div class="p2-header" style="margin-top: 5%">
+                <h1>My Projects</h1>
             </div>
 
             <!-- Projects 2 -->
             <div id="p2-container">
                 <!-- block 1 -->
-                <div class="new-block">
+                <a href="/reconciliation-dashboard" class="new-block">
                     <div class="image-content">
                         <img
                             src="img/p2-1.png"
@@ -141,21 +154,18 @@
                     </div>
                     <div class="text-content">
                         <p class="project-details">
-                            Accounting Analytics / Greenfield Development /
-                            FinTech
+                            Desktop / 0 to 1 / FinTech
+                            <span class="company-name">Apple</span>
                         </p>
                         <h2>
                             Streamlining Financial Processes through Unified
                             Reconciliation Platform
                         </h2>
-                        <a href="/reconciliation-dashboard" class="project-link"
-                            >Open Project<img src="img/arrow-right.svg" alt=""
-                        /></a>
                     </div>
-                </div>
+                </a>
 
-                <!--block 2  -->
-                <div class="new-block">
+                <!-- block 2 -->
+                <a href="/smarp" class="new-block">
                     <div class="image-content">
                         <img
                             src="img/p2-2.png"
@@ -165,17 +175,56 @@
                     </div>
                     <div class="text-content">
                         <p class="project-details">
-                            Mobile / UX Research / Redesign
+                            Desktop / 0 to 1 / AI
+                            <span class="company-name">Apple</span>
+                        </p>
+                        <h2>
+                            Supporting Accounting Experts with AI-Driven FinTech
+                            Tools
+                        </h2>
+                    </div>
+                </a>
+
+                <!-- block 3 -->
+                <a href="/reconciliation-dashboard" class="new-block">
+                    <div class="image-content">
+                        <img
+                            src="img/p2-3.png"
+                            srcset="img/p2-3.png 1x, img/p2-3@2x.png 2x"
+                            alt="FinTech Project Image"
+                        />
+                    </div>
+                    <div class="text-content">
+                        <p class="project-details">
+                            Mobile / Redesign / Employee Comm
+                            <span class="company-name">Smarp</span>
                         </p>
                         <h2>
                             Enhancing Employee Communication Through Mobile
                             Experience Redesign
                         </h2>
-                        <a href="/smarp" class="project-link"
-                            >Open Project<img src="img/arrow-right.svg" alt=""
-                        /></a>
                     </div>
-                </div>
+                </a>
+
+                <!-- block 4 -->
+                <a href="/smarp" class="new-block">
+                    <div class="image-content">
+                        <img
+                            src="img/p2-4.png"
+                            srcset="img/p2-4.png 1x, img/p2-4@2x.png 2x"
+                            alt="FinTech Project Image"
+                        />
+                    </div>
+                    <div class="text-content">
+                        <p class="project-details">
+                            Mobile / Redesign / Fintech
+                            <span class="company-name">IDT Technology</span>
+                        </p>
+                        <h2>
+                            From Money Transfer to Mobile Banking Transformation
+                        </h2>
+                    </div>
+                </a>
             </div>
 
             <div id="footer"></div>
