--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </a>
 
                 <!-- block 2 -->
-                <a href="/smarp" class="new-block">
+                <a href="/reconciliation-genai" class="new-block">
                     <div class="image-content">
                         <img
                             src="img/p2-2.png"
@@ -186,7 +186,7 @@
                 </a>
 
                 <!-- block 3 -->
-                <a href="/reconciliation-dashboard" class="new-block">
+                <a href="/smarp" class="new-block">
                     <div class="image-content">
                         <img
                             src="img/p2-3.png"
@@ -207,7 +207,7 @@
                 </a>
 
                 <!-- block 4 -->
-                <a href="/smarp" class="new-block">
+                <a href="/idt-banking" class="new-block">
                     <div class="image-content">
                         <img
                             src="img/p2-4.png"
