new home mobile

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="css/global.css" />
         <link rel="stylesheet" href="css/hero.css" />
         <link rel="stylesheet" href="css/hero-mq.css" />
-        <link rel="stylesheet" href="css/p1.css" />
-        <link rel="stylesheet" href="css/p1-mq.css" />
+        <link rel="stylesheet" href="css/exp.css" />
+        <link rel="stylesheet" href="css/exp-mq.css" />
         <link rel="stylesheet" href="css/p2.css" />
         <link rel="stylesheet" href="css/p2-mq.css" />
         <meta
